2010-03-03 Eric Sandall <sandalle@sourcemage.org>
	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: Add 2.6.33

2010-02-24 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: 2.6.33
	* info/kernels/2.6.33: added
	* info/patches/PRE_2_6/patch-2.6.33: added
	* info/patches/maintenance_patches/patch-2.6.33: added

2010-02-23 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.9
	* info/patches/maintenance_patches/patch-2.6.32.9: added

2010-01-27 Arjan Bouter <abouter@sourcemage.org>
	* info/patches/zen_patches/2.6.32-zen6.patch: latest zen
	* latest.defaults: updated latest zen

2010-02-09 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.8
	* info/patches/maintenance_patches/patch-2.6.32.8: added

2010-01-29 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.7
	* info/patches/maintenance_patches/patch-2.6.32.7: added
	* info/patches/maintenance_patches/patch-2.6.27.45: added

2010-01-27 Arjan Bouter <abouter@sourcemage.org>
	* info/patches/zen_patches/2.6.32-zen5.patch: latest zen

2010-01-26 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.6
	* info/patches/maintenance_patches/patch-2.6.32.6: added

2010-01-22 Eric Sandall <sandalle@sourcemage.org>
	* latest.defaults: updated latest to patch-2.6.32.5
	* info/patches/maintenance_patches/patch-2.6.32.5: added

2010-01-19 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.4
	* info/patches/maintenance_patches/patch-2.6.32.4: added
	* info/patches/maintenance_patches/patch-2.6.27.44: added

2010-01-07 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.32.3
	* info/patches/maintenance_patches/patch-2.6.32.3: added
	* info/patches/maintenance_patches/patch-2.6.27.43: added

2009-12-20 Arjan Bouter <abouter@sourcemage.org>
	* info/patches/zen_patches/2.6.32-zen2.patch: latest zen

2009-12-19 Vlad Glagolev <stealth@sourcemage.org>