@@ -1,0 +1,6 @@
+appliedkernels="2.6.33"
+depends=""
+patchversion="2.6.33-zen1"
+source="${patchversion}.patch.lzma"
+source_url="http://downloads.zen-kernel.org/${appliedkernels}/${source}"
+md5="71f4e8ceb63213b4248756f8f70727a1"
