@@ -1,3 +1,7 @@
+2010-03-10 Arjan Bouter <abouter@sourcemage.org>
+	* info/patches/zen_patches/2.6.33-zen1.patch: latest zen
+	* latest.defaults: updated latest zen
+
 2010-03-03 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: Add 2.6.33
 
